Add list_item_repo layout

--- a/app/src/main/res/layout/list_item_repo.xml
+++ b/app/src/main/res/layout/list_item_repo.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:onClick="@{clickListener}">
 
-
         <ImageView
             android:id="@+id/imgAvatar"
             android:layout_width="40dp"
@@ -31,6 +30,7 @@
             android:contentDescription="@string/content_description_owner_avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:src="@android:drawable/"
             app:srcCompat="@drawable/ic_launcher_background" />
 
         <TextView
