--- a/app/src/main/res/layout/browse_fragment.xml
+++ b/app/src/main/res/layout/browse_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.motion.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,10 +18,12 @@
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rclRepo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.motion.MotionLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/list_item_repo" />
+</android.support.constraint.ConstraintLayout>
