Load image of repo owner

--- a/app/src/main/res/layout/list_item_repo_card.xml
+++ b/app/src/main/res/layout/list_item_repo_card.xml
@@ -24,6 +24,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/content_description_owner_avatar"
+            app:imageUrl="@{repo.owner.avatarUrl}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_launcher_background" />
