Add font sizes and default font size

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<resources>
+    <dimen name="fontSizeNormal">14dp</dimen>
+    <dimen name="fontSizeHint">12dp</dimen>
+    <dimen name="fontSizeTitle">18dp</dimen>
+</resources>
