--- a/app/src/main/res/layout/list_item_repo_card.xml
+++ b/app/src/main/res/layout/list_item_repo_card.xml
@@ -26,8 +26,7 @@
             android:contentDescription="@string/content_description_owner_avatar"
             app:imageUrl="@{repo.owner.avatarUrl}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/lblName"
