--- a/app/src/main/res/layout/repo_fragment.xml
+++ b/app/src/main/res/layout/repo_fragment.xml
@@ -11,12 +11,24 @@
     </data>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imgAvatar"
@@ -41,7 +53,7 @@
                 android:text="@{repo.fullName}"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/progressBar"
                 app:layout_constraintStart_toEndOf="@+id/imgAvatar"
                 app:layout_constraintTop_toTopOf="@+id/imgAvatar"
                 tools:text="tommybuonomo/dotsindicator" />
